# Real_Time_Systems

./: CMakeLists.txt  README.md
Final_Project/: CMakeLists.txt  http_sever_and_flash_program.rar  main.rar
Final_Project/main/: CMakeLists.txt  curtain.c  curtain.h  http_server.c  http_server.h  idf_component.yml  main.c  rgb_led.c  servo.c  servo.h  wifi_app.c  wifi_app.h
LEDRGB_Potentiometer/: CMakeLists.txt
LEDRGB_Potentiometer/main/: oneshot_read_main.c
Parcial1_RTS/: CMakeLists.txt  main.rar
Parcial1_RTS/main/: CMakeLists.txt  UART_driver.c  adc_driver.c  libraries.h  pwm_driver.c  system.c  tasks.c
Proyecto_Final/: CMakeLists.txt  README.md
Proyecto_Final/main/: CMakeLists.txt  alarm_led.c  alarm_led.h  automatic_control.c  automatic_control.h  curtain.c  curtain.h  fan_control.c  fan_control.h  http_server.c  http_server.h  idf_component.yml  light_sensor.c  light_sensor.h  main.c  ntc_sensor.c  ntc_sensor.h  project_pins.h  rgb_led.c  rgb_led.h  servo.c  system_state.h  wifi_app.c
Proyecto_Final/main/webpage/: app.css  app.js  index.html
RGB_NTC_Libraries/: CMakeLists.txt
RGB_NTC_Libraries/main/: CMakeLists.txt  Libraries.c  Libraries.h  oneshot_read_main.c
RGB_Potentiometer_Libraries/: CMakeLists.txt  README.md
RGB_Potentiometer_Libraries/main/: Libraries.c  (+2 more)
RGB_UART/: CMakeLists.txt
RGB_UART_TEMPERATURE/: CMakeLists.txt
RGB_with_button/: libraries.c  libraries.h  main.c
led_temp_OTA_proof/: CMakeLists.txt
main/: CMakeLists.txt  NTC-LEDRGB.code-workspace  blink_example_main.c  oneshot_read_main.c
states_of_blink/: main.c
(+12 files in other folders)
